--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -3,7 +3,17 @@ body {
     height: 100%;
 }
 
+.master-header{
+    background-color: #C63318 !important;
+    border-color:  #C63318;
+}
+
+.master-header a,button{
+    color: white!important;
+}
+
 .wrap {
+    background-color: #EEEEEE;
     min-height: 100%;
     height: auto;
     margin: 0 auto -60px;
@@ -18,9 +28,106 @@ body {
     height: 60px;
     background-color: #4A4A4A;
     border-top: 1px solid #ddd;
-    padding-top: 20px;
+    padding: 20px;
 }
 
+.footer img{
+    max-width: 150px;
+}
+
+.auth-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.auth-block input {
+    max-width: 275px;
+    width: 275px;
+}
+
+.auth-block .checkbox label{
+    padding-left: 0;
+}
+
+.auth-block input[type="checkbox"]{
+    height: 20px;
+    margin-top: 0;
+}
+
+
+
+.auth-block__button{
+    display: flex;
+    justify-content: center;
+}
+
+.auth-block__button .btn.w-100{
+    width: 100%!important;
+}
+
+.btn-master {
+    background-color: #C63318 !important;
+    color: white;
+    border: 2px solid transparent;
+}
+.btn-master:hover,
+.btn-master:active,
+.btn-master:focus{
+    outline: none;
+    color: white;
+    border: 2px solid darkred;
+}
+
+.specialization-block{
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.site-index h1{
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    text-align: center;
+}
+
+.specialization-block__item{
+}
+
+.specialization-block__item a{
+    color: #4A4A4A;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.specialization-block__item a:hover {
+    color: #C63318;
+}
+
+.specialization-block__item a:hover img{
+    transform: scale(1.1);
+    transition: .2s;
+}
+
+.specialization-block__item img{
+    max-width: 150px;
+}
+
+@media (max-width: 768px) {
+    .specialization-block{
+        flex-direction: column;
+    }
+    .specialization-block h2{
+        text-align: center;
+    }
+    .specialization-block__item:last-child{
+        margin-top: 50px;
+    }
+}
 .jumbotron {
     text-align: center;
     background-color: transparent;
