--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -47,7 +47,7 @@ body {
     background-color: #EEEEEE;
     min-height: 100%;
     height: auto;
-    margin: 0 auto -60px;
+    margin: 0 auto 0px;
 }
 
 .wrap > .container {
@@ -404,4 +404,15 @@ a.desc:after {
 .doors-list .doors-list__item:hover{
     transform: scale(1.1);
     transition: 0.5s;
+}
+
+.ticket-info .ticket-info__personal div{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 15px 0 0 0;
+}
+
+.ticket-info .ticket-info__personal img{
+    max-width: 175px;
 }
