--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -413,6 +413,10 @@ a.desc:after {
     margin: 15px 0 0 0;
 }
 
+.ticket-info h3{
+    font-weight: bold;
+}
+
 .ticket-info .ticket-info__personal img{
     max-width: 175px;
 }
