--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -384,9 +384,13 @@ a.desc:after {
 
 
 .doors-list .doors-list__item {
+    min-width: 300px;
+    max-width: 300px;
+    max-height: 450px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-start;
     border: 1px solid black;
     border-radius: 10px;
     margin: 15px 0;
@@ -403,6 +407,14 @@ a.desc:after {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+.doors-list .doors-list__item div:last-child {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 260px;
+    max-width: 260px;
+    display: inline-block;
 }
 
 .doors-list .doors-list__item h4 strong a{
